--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: [Gopal Kumar Misc webuploads]
-description: [CV and Misc Presenations]
+title: [Gopal Kumar Misc files Repositories]
+description: [CV and Misc Presentations]
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
